src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
.modalDialog {
  max-height: 80vh;
  max-height: 85dvh;
  display: flex;
}

.modalContent {
  overflow: auto;
}

.analysisForm {
  display: flex;
  flex-flow: column nowrap;
  gap: var(--double-unit);
  width: 650px;
  align-items: flex-start;
  padding: 0 4px 20px;
}

.buttonsRow {
  display: flex;
  flex-flow: row wrap;
  gap: var(--unit);
  justify-content: flex-end;
}

.multiselectContainer {
  width: 450px;
}

.addLayersButton {
  margin-top: var(--unit);
}

.legendContainer {
  width: 100%;
}

.legend {
  width: 100%;
  margin-inline-start: 20px;
  display: flex;
  justify-content: center;
}

.customStepsRow {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  gap: var(--unit);
  align-items: center;
}

.customStepsRowName {
  width: 45px;
}

.customStepInput {
  width: 100px;
}

@media screen and (max-width: 960px) {
  .modalDialog {
    height: 85vh;
    height: 100dvh;
  }

  .analysisForm {
    display: flex;
    width: 100%;
  }

  .multiselectContainer {
    width: 100%;
  }
}

